# santichlaus

./: .gitignore  README.md  pom.xml
haskell/: .gitignore  layout.hamlet  mail.hs  persist.hs  post.txt  printlayout.hamlet  registrations.hamlet  santi.closed.hamlet  santi.hamlet  santi.hs  santi.js  santi.julius  santichlaus.cabal  stack.yaml  times.hs  types.hs
haskell/src/app/haskell/: Main.hs
haskell/src/main/haskell/: Santi.hs
haskell/src/main/haskell/Santi/: Mail.hs  Persist.hs  Privileges.hs  Types.hs
haskell/static/: controllers.js  garland.css  printlayout.css  santi.css  santi.js
haskell/warponly/: mail.hs
qooxdoo-0.8.3-sdk/santiglaus/: Manifest.json  config.json  generate.py
qooxdoo-0.8.3-sdk/santiglaus/source/class/santiglaus/: Application.js
qooxdoo-0.8.3-sdk/santiglaus/source/class/santiglaus/test/: DemoTest.js
qooxdoo-0.8.3-sdk/santiglaus/source/class/santiglaus/theme/: Appearance.js  Color.js  Decoration.js  Font.js  Theme.js
qooxdoo-0.8.3-sdk/santiglaus/source/script/: santiglaus.js
scripts/: changepassword
src/main/html/: Santichlaus 2012 - Anmeldung.html
src/main/html/Santichlaus 2012 - Anmeldung_files/: santichlaus.css
src/main/java/ch/comebackgloebb/website/: Utils.java
src/main/java/ch/comebackgloebb/website/santichlaus/: MailService.java  SantichlausService.java  Utils.java
src/main/resources/SLING-INF/jcr_root/apps/cbg/components/: confirmationmail.xml  registrationmail.xml
src/main/resources/SLING-INF/jcr_root/apps/cbg/components/confirmationmail/: txt.jsp
src/main/resources/SLING-INF/jcr_root/apps/cbg/components/page/: POST.jsp  page.jsp
src/main/resources/SLING-INF/jcr_root/apps/cbg/components/registrationmail/: txt.jsp
src/main/resources/SLING-INF/jcr_root/apps/cbg/components/registrations/: csv.jsp
src/main/resources/SLING-INF/jcr_root/apps/cbg/page/: POST.jsp  page.jsp
src/main/resources/SLING-INF/jcr_root/content/: cbg.xml  santichlaus.xml
src/main/resources/SLING-INF/jcr_root/content/cbg/: garland.css  santi.css
src/main/resources/SLING-INF/jcr_root/content/santichlaus/: registrationmail.xml  santi.css
src/main/resources/SLING-INF/nodetypes/: nodetypes.cnd
